@@ -15,6 +15,7 @@ EDGE 2.4.0
 * Add vcf filter options: -I and -r for alternative bases ration and INDEL depth support value
 * Add Centrifuge taxonomy classification tool
 * Update Kraken to Kraken-2.0.7
+* Update Contig taxonomy classification from bwa to minimap2, perl to python
 
 EDGE GUI 2.4.0
 * Add Ploidy option for Variant calling
